--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.loader-container {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    height: 100vh;  /* Full viewport height */
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .loader {
+    border: 8px solid #f3f3f3;  /* Light grey */
+    border-top: 8px solid #3498db;  /* Blue */
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite;
+    margin-top: 300px;
+    
   }
-  to {
-    transform: rotate(360deg);
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
-}
+
+  
+
+  .navbar {
+    justify-content: space-between;
+  }
+  
+  .navbar-brand {
+    margin-left: 80px; /* adjust the value to match the desired distance */
+  }
+  
+  .linkedin-twitter-links {
+    margin-right: 20px;
+    color: yellow;
+     /* adjust the value to match the desired distance */
+  }  
+
+  
+  .linkedin-twitter-links a {
+    color: white;
+  }  
